--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ input[type="checkbox"]{cursor:pointer;}
   <tbody id="cuerpoTabla"></tbody>
 </table>
 
-<script type="module">
+<script>
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
 import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-database.js";
 
